# mech-interp-for-codeswitching

./: .gitignore  README.md  analysis.py  config.yaml  pyproject.toml  requirements.txt  save_activations.py
clean_interp_v3/: README.md  config.french.yaml  config.hindi.yaml  run.py
clean_interp_v3/clean_interp_v3/: __init__.py  activations.py  config.py  data.py  pipeline.py  plots.py  stats.py
data/: french.csv  hindi.csv
data/raw/: hi_entertainment_data.json  hi_tech_data.json
experiments/: README.md
experiments/common/: data.py  tl.py  utils.py
experiments/exp1_cluster_analysis/: LICENSE  README.md
experiments/exp2_switch_point_activations/: README.md  run.py  run_v2.py
experiments/exp3_language_pair_comparison/: exp21.py  exp3.py  exp6test.py  extract_activations.py  preprocess.py
experiments/exp4_language_selectivity/: README.md  run.py
experiments/exp4_switch_activation/: README.md  analyze_exp4.py
mechinterp_pipeline/: concept_metrics.py  io_utils.py
new-compute/: README.md  ab_compare_hf_vs_tl_subset.py  ablation_condition_unique_neurons.py  compute_condition_specific_neurons.py  hindi_compute_log.txt  layer_analysis.py  neuron_selection.py  plot_sample_heatmaps.py  visualize_new_compute.py  visuals_log.txt
pipeline/: __init__.py  io_utils.py
scripts/: audit_dataset_nll_factors.py  build_activation_dataframe.py  causal_analysis.py  compare_language_runs.py  prepare_dataset_for_pipeline.py  run_pipeline.py  save_activations.py  visualise_neurons.py
src/mechinterp_pipeline/: __init__.py  analysis.py  io_utils.py  modeling.py  (+1 more)
(+97 files in other folders)
